--- a/trunk/RetailTrade/Invoice/InvoiceMasterNewAll.resx
+++ b/trunk/RetailTrade/Invoice/InvoiceMasterNewAll.resx
@@ -155,4 +155,7 @@
   <metadata name="stockTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>416, 57</value>
   </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>117</value>
+  </metadata>
 </root>
